--- a/dragino/dragino.ini
+++ b/dragino/dragino.ini
@@ -21,6 +21,10 @@ fcount_filename = .lora_fcount
 #appskey =
 
 auth_mode = otaa
-deveui = 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x01
-appeui = 0x00, 0x00, 0x00, 0x00, 0x00, 0xD5, 0xB3, 0x70
+deveui = 0xFF, 0xFE, 0xFD, 0xFC, 0xFC, 0xFD, 0xFE, 0xFF
+appeui = 0x70, 0xB3, 0xD5, 0x00, 0x00, 0xD5, 0xB3, 0x70
 appkey = 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+fcount = 671
+appskey = 95, 31, 86, 214, 230, 3, 29, 114, 18, 73, 115, 124, 223, 62, 183, 87
+devaddr = 38, 11, 206, 102
+nwkskey = 210, 243, 133, 114, 43, 107, 6, 28, 93, 40, 171, 215, 180, 98, 106, 84
